--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@prismicio/client": "^6.5.1",
     "@prismicio/helpers": "^2.3.1",
     "compression": "^1.7.4",
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "node-fetch": "^3.2.6",
     "nodemon": "^2.0.16"
