--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "![Ilojo Bar](assets/ilojobar-sign.png)",
   "main": "app.js",
   "type": "module",
+  "engines": {
+    "node": "8.3.1"
+    },
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js"
